feat: add reset password endpoint
