# backend/cmd/api/user.go
@@ -113,14 +113,19 @@ func (server *Server) forgotPassword(ctx *gin.Context) {
 		return
 	}
 
-	now := time.Now()
+	token, payload, err := server.tokenMaker.CreateToken(user.ID.Hex(), user.Role, 25*time.Minute)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse("failed to create reset password session"))
+		return
+	}
+
 	resetPassword, err := server.store.CreateUserAction(ctx, &models.UserAction{
 		UserID:     user.ID,
 		Email:      user.Contact.Email,
-		SecretCode: utils.RandomString(64), // TODO: Substitute value with a token-based string
+		SecretCode: utils.Extract(token),
 		ActionType: "reset_password",
-		CreatedAt:  now,
-		ExpiredAt:  now.Add(15 * time.Minute),
+		CreatedAt:  payload.IssuedAt,
+		ExpiredAt:  payload.ExpiredAt,
 	})
 	if err != nil {
 		ctx.JSON(http.StatusInternalServerError, errorResponse("failed to create user action"))
@@ -196,7 +201,7 @@ func (server *Server) login(ctx *gin.Context) {
 	ctx.JSON(http.StatusOK,
 		envelop{
 			"data": gin.H{
-				"data":    user,
+				"user":    user,
 				"token":   token,
 				"payload": payload,
 			},
@@ -397,4 +402,66 @@ func (server *Server) logout(ctx *gin.Context) {
 		Str("request_method", ctx.Request.Method).
 		Str("request_path", ctx.Request.URL.Path).
 		Msg("logged out user")
+}
+type resetUserPasswordQuery struct {
+	ResetToken string `form:"reset_token" binding:"required"`
+}
+
+type resetUserRequest struct {
+	NewPassword     string `json:"new_password" binding:"required,min=8"`
+	ConfirmPassword string `json:"confirm_new_password" binding:"required,min=8,eqfield=NewPassword"`
+}
+
+func (server *Server) resetPassword(ctx *gin.Context)  {
+	var reqQuery resetUserPasswordQuery
+	var reqBody resetUserRequest
+
+	if err := bindJSONWithValidation(ctx, ctx.ShouldBindQuery(&reqQuery), validator.New()); err != nil {
+		return
+	}
+
+	if err := bindJSONWithValidation(ctx, ctx.ShouldBindJSON(&reqBody), validator.New()); err != nil {
+		return
+	}
+
+	token := utils.Concat(reqQuery.ResetToken)
+
+	payload, err := server.tokenMaker.VerifyToken(token)
+	if err != nil {
+		ctx.JSON(http.StatusUnauthorized, errorResponse(err.Error()))
+		return
+	}
+
+	exists, err := server.cache.IsSessionBlacklisted(ctx, payload.ID.String())
+	if err != nil || exists {
+		ctx.JSON(http.StatusUnauthorized, errorResponse("invalid token"))
+		return
+	}
+
+	hashedPassword, err := utils.HashedPassword(reqBody.NewPassword)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse("failed to hash password"))
+		return
+	}
+
+	arg := map[string]interface{}{
+		"hashed_password": hashedPassword,
+	}
+
+	_, err = server.store.UpdateUser(ctx, payload.UserID, arg)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse("failed to update user's password"))
+		return
+	}
+
+	expiredAt := payload.ExpiredAt
+	duration := time.Until(expiredAt)
+
+	err = server.cache.BlacklistSession(ctx, payload.ID.String(), duration)
+	if err != nil {
+		ctx.JSON(http.StatusInternalServerError, errorResponse("failed to blacklist access token"))
+		return
+	}
+
+	ctx.JSON(http.StatusOK, envelop{"result": "password updated successfully"})
 }
